--- a/styles.css
+++ b/styles.css
@@ -60,10 +60,31 @@ nav li{
     margin-right: 240px;
 }
 
+/*adding the languages i have experience with*/
+
+.exp-outline h3{
+    text-align: center;
+    font-size: 30px;
+    font-family: sans-serif; 
+}
+
 .exp{
     display: flex;
     flex-direction: row;
-    height: 200px;
-    font-family: sans-serif;
     justify-content: center;
+    height: 400px;
+    font-family: sans-serif;
+    border: solid red 1px;
+}
+
+.exp ul{
+margin-top: 60px;
+border: solid 1px blue;
+font-size: 25px;
+margin-right: 50px;
+margin-left: 50px;
+}
+
+.exp li{
+    padding-top: 12px;
 }
