--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ nav ul{
     flex-direction: row;
     border: solid black 1px;
     font-size: 30px;
-    padding-left: 520px;
+    padding-left: 540px;
     padding-top: 10px;
     height: 45px;
     background-color: black;
@@ -15,6 +15,19 @@ nav li{
     color: white;
     font-family: sans-serif;
 }
+
+/*nav link styles*/
+nav li a{
+    color: white;
+    text-decoration: none;
+}
+
+/*nav link hover effects*/
+nav li a:hover{
+
+}
+
+
 
 /*main banner section*/
 
