--- a/styles.css
+++ b/styles.css
@@ -2,16 +2,15 @@
 nav ul{
     display: flex;
     flex-direction: row;
-    border: solid black 1px;
     font-size: 30px;
-    padding-left: 540px;
-    padding-top: 10px;
+    padding-left: 500px;
+    padding-top: 15px;
     height: 45px;
     background-color: black;
 }
 
 nav li{
-    padding-right: 25px;
+    padding-right: 39px;
     color: white;
     font-family: sans-serif;
 }
@@ -24,10 +23,9 @@ nav li a{
 
 /*nav link hover effects*/
 nav li a:hover{
-
+    color: rgb(73, 202, 73);
+    transition: ease-in 0.5s;
 }
-
-
 
 /*main banner section*/
 
@@ -55,9 +53,9 @@ nav li a:hover{
 /*About Section*/
 
 .about{
-    padding-top: 50px;
+    padding-top: 100px;
     text-align: center;
-    height: 450px;
+    height: 300px;
     font-family: sans-serif;
 }
 
@@ -67,15 +65,21 @@ nav li a:hover{
 
 .about p{
     font-size: 25px;
-    height: 100px;
-    padding-top: 30px;
+    border: 1px purple solid;
+    height: 85px;
+    margin-top: 35px;
     margin-left: 240px;
     margin-right: 240px;
 }
 
 /*adding the languages I have experience with*/
+.exp-outline{
+    border: blue solid 1px;
+    height: 400px;
+}
 
 .exp-outline h3{
+    padding-top: 85px;
     text-align: center;
     font-size: 30px;
     font-family: sans-serif; 
@@ -85,13 +89,11 @@ nav li a:hover{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    height: 400px;
     font-family: sans-serif;
 }
 
 .exp ul{
-margin-top: 60px;
-border: solid 1px blue;
+margin-top: 100px;
 font-size: 25px;
 margin-right: 50px;
 margin-left: 50px;
