--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ nav li a{
 /*nav link hover effects*/
 nav li a:hover{
     color: rgb(73, 202, 73);
-    transition: ease-in 0.5s;
+    transition: ease-in 0.2s;
 }
 
 /*main banner section*/
@@ -53,28 +53,30 @@ nav li a:hover{
 /*About Section*/
 
 .about{
-    padding-top: 100px;
+    padding-top: 120px;
     text-align: center;
     height: 300px;
     font-family: sans-serif;
+    border-bottom: black 4px solid;
+    margin-left: 130px;
+    margin-right: 130px;
 }
 
 .about h2{
     font-size: 30px;
+    font-weight: bold;
 }
 
 .about p{
     font-size: 25px;
-    border: 1px purple solid;
     height: 85px;
     margin-top: 35px;
-    margin-left: 240px;
-    margin-right: 240px;
+    margin-left: 160px;
+    margin-right: 160px;
 }
 
 /*adding the languages I have experience with*/
 .exp-outline{
-    border: blue solid 1px;
     height: 400px;
 }
 
@@ -82,7 +84,8 @@ nav li a:hover{
     padding-top: 85px;
     text-align: center;
     font-size: 30px;
-    font-family: sans-serif; 
+    font-family: sans-serif;
+    font-weight: bold; 
 }
 
 .exp{
@@ -102,4 +105,15 @@ margin-bottom: 230px;
 
 .exp li{
     padding-bottom: 12px;
+}
+
+/*Personal Project section*/
+.portfolio{
+    height: 400px;
+    border: 1px solid red;
+}
+
+/*Contact form section*/
+.contact{
+    height: 400px;
 }
