--- a/styles.css
+++ b/styles.css
@@ -109,11 +109,42 @@ margin-bottom: 230px;
 
 /*Personal Project section*/
 .portfolio{
-    height: 400px;
-    border: 1px solid red;
+    height: 400px; 
+    background-color: green;
+}
+
+.portfolio h4{
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    font-family: sans-serif;
+    padding-top: 30px;
 }
 
 /*Contact form section*/
 .contact{
     height: 400px;
+}
+
+.contact h5{
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: sans-serif;
+    padding-top: 30px;
+}
+
+/*footer section for the site*/
+
+footer{
+    height: 50px;
+    text-align: center;
+    color: white;
+    background-color: black;
+}
+
+footer p{
+    padding-top: 15px;
+    font-size: 20px;
+    font-family: sans-serif;
 }
