--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@ margin-bottom: 230px;
 
 /*Personal Project section*/
 .portfolio{
-    height: 400px; 
+    height: 600px; 
     background-color: green;
 }
 
@@ -121,9 +121,16 @@ margin-bottom: 230px;
     padding-top: 30px;
 }
 
+.projects{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border: 1px solid red;
+}
+
 /*Contact form section*/
 .contact{
-    height: 400px;
+    height: 600px;
 }
 
 .contact h5{
