--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ nav li a:hover{
 
 /*adding the languages I have experience with*/
 .exp-outline{
-    height: 400px;
+    height: 460px;
 }
 
 .exp-outline h3{
@@ -110,7 +110,7 @@ margin-bottom: 230px;
 /*Personal Project section*/
 .portfolio{
     height: 600px; 
-    background-color: green;
+    background-color: rgb(38, 240, 38);
 }
 
 .portfolio h4{
@@ -125,7 +125,17 @@ margin-bottom: 230px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    border: 1px solid red;
+    color: white;
+    padding-top: 90px;
+    padding-left: 130px;
+}
+
+.p1{
+    border: white 2.5px solid;
+    margin-right: 30px;
+    width: 280px;
+    height: 280px;
+    border-radius: 5px;
 }
 
 /*Contact form section*/
