changing a class name

--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,7 @@ margin-bottom: 230px;
     padding-left: 130px;
 }
 
-.p1{
+.proj{
     border: white 2.5px solid;
     margin-right: 30px;
     width: 280px;
