--- a/styles.css
+++ b/styles.css
@@ -163,6 +163,12 @@ margin-bottom: 230px;
     font-family: sans-serif;
 }
 
+.resume-section{
+    padding-left: 720px;
+    margin-top: 30px;
+    border: solid red 1px;
+}
+
 /*footer section for the site*/
 
 footer{
