--- a/styles.css
+++ b/styles.css
@@ -164,7 +164,8 @@ margin-bottom: 230px;
 }
 
 .resume-section{
-    padding-left: 730px;
+    padding-top: 10px;
+    padding-left: 728px;
     margin-top: 30px;
 }
 
